--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "v2.4.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "doctrine/dbal": "v2.4.2"
+        "nwidart/laravel-modules": "^3.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -24,7 +25,8 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "Modules/"
         }
     },
     "autoload-dev": {
