add create method

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "nwidart/laravel-modules": "^3.2"
+        "nwidart/laravel-modules": "^3.2",
+        "laravelcollective/html": "~5.0"
+
     },
     "require-dev": {
         "filp/whoops": "^2.0",
